--- a/monitor/index.html
+++ b/monitor/index.html
@@ -17,6 +17,8 @@
 
     <div id="graph-container" style="display: none">
       <h2>Graph</h2>
+      <button id="start-graph">start</button>
+      <button id="stop-graph">stop</button>
       <div>
 
         <div style="float: left">
@@ -72,6 +74,8 @@
       <hr style="clear: both" />
 
       <h2>Graph(Sub)</h2>
+      <button id="start-sub-graph">start</button>
+      <button id="stop-sub-graph">stop</button>
       <div>
 
         <div style="float: left">
